--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,11 @@
 steps:
 
--   id: "Rodando o teste unitario greeting_test.go"
+-   id: "Buildando o greeting.go"
+    name: 'mirror.gcr.io/library/golang'
+    env: ['GO111MODULE=on']
+    args: ['go','build','src/main/greeting.go']
+
+-   id: "Rodando o teste unit greeting_test.go"
     name: 'mirror.gcr.io/library/golang'
     args: ['test','greeting_test.go']
     env: ['GOPATH=.']
